; ModuleID = '/home/carl/AnghaBench/linux/drivers/pinctrl/extr_core.c_pinctrl_gpio_set_config.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pinctrl/extr_core.c_pinctrl_gpio_set_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pinctrl_gpio_range = type { i32 }
%struct.pinctrl_dev = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pinctrl_gpio_set_config(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca [1 x i64], align 8
  %7 = alloca %struct.pinctrl_gpio_range*, align 8
  %8 = alloca %struct.pinctrl_dev*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  %11 = getelementptr inbounds [1 x i64], [1 x i64]* %6, i64 0, i64 0
  %12 = load i64, i64* %5, align 8
  store i64 %12, i64* %11, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @pinctrl_get_device_gpio_range(i32 %13, %struct.pinctrl_dev** %8, %struct.pinctrl_gpio_range** %7)
  store i32 %14, i32* %9, align 4
  %15 = load i32, i32* %9, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %2
  %18 = load i32, i32* %9, align 4
  store i32 %18, i32* %3, align 4
  br label %36

19:                                               ; preds = %2
  %20 = load %struct.pinctrl_dev*, %struct.pinctrl_dev** %8, align 8
  %21 = getelementptr inbounds %struct.pinctrl_dev, %struct.pinctrl_dev* %20, i32 0, i32 0
  %22 = call i32 @mutex_lock(i32* %21)
  %23 = load %struct.pinctrl_gpio_range*, %struct.pinctrl_gpio_range** %7, align 8
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @gpio_to_pin(%struct.pinctrl_gpio_range* %23, i32 %24)
  store i32 %25, i32* %10, align 4
  %26 = load %struct.pinctrl_dev*, %struct.pinctrl_dev** %8, align 8
  %27 = load i32, i32* %10, align 4
  %28 = getelementptr inbounds [1 x i64], [1 x i64]* %6, i64 0, i64 0
  %29 = getelementptr inbounds [1 x i64], [1 x i64]* %6, i64 0, i64 0
  %30 = call i32 @ARRAY_SIZE(i64* %29)
  %31 = call i32 @pinconf_set_config(%struct.pinctrl_dev* %26, i32 %27, i64* %28, i32 %30)
  store i32 %31, i32* %9, align 4
  %32 = load %struct.pinctrl_dev*, %struct.pinctrl_dev** %8, align 8
  %33 = getelementptr inbounds %struct.pinctrl_dev, %struct.pinctrl_dev* %32, i32 0, i32 0
  %34 = call i32 @mutex_unlock(i32* %33)
  %35 = load i32, i32* %9, align 4
  store i32 %35, i32* %3, align 4
  br label %36

36:                                               ; preds = %19, %17
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @pinctrl_get_device_gpio_range(i32, %struct.pinctrl_dev**, %struct.pinctrl_gpio_range**) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @gpio_to_pin(%struct.pinctrl_gpio_range*, i32) #1

declare dso_local i32 @pinconf_set_config(%struct.pinctrl_dev*, i32, i64*, i32) #1

declare dso_local i32 @ARRAY_SIZE(i64*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
